--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "shops-bulk-transactions",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "",
   "main": "index.js",
+  "type":"module",
 
  
   "scripts": {
