--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
   "name": "shops-bulk-transactions",
-  "version": "1.3.8",
+  "version": "1.3.9",
   "description": "",
   "main": "index.js",
-  "type": "module",
- 
-  
-
- 
+  "type":"module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -30,6 +26,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
     "ethers": "^5.6.9",
-    "module": "^1.2.5"
+    "module": "^1.2.5",
+    "solidity-coverage": "^0.7.21"
   }
 }
