--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.3.9",
   "description": "",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\"",
+    "prettier": "prettier . --write",
+    "solhint": "solhint -f table 'contracts/**/*.sol'",
+    "lint": "eslint --fix \"**/*.js\"",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -20,8 +24,18 @@
   "devDependencies": {
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.6",
+    "eslint": "^8.19.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0",
     "ethereum-waffle": "^3.4.4",
-    "hardhat": "^2.9.9"
+    "hardhat": "^2.9.9",
+    "husky": "^8.0.1",
+    "prettier": "^2.7.1",
+    "prettier-plugin-solidity": "^1.0.0-dev.22",
+    "solhint": "^3.3.7",
+    "solhint-plugin-prettier": "^0.0.5"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
