fix: Update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shops-bulk-transactions",
+  "name": "escrow-bulk-transactions",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
