--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@ typechain
 #Hardhat files
 cache
 
-
 node_modules
 .env
 coverage
@@ -15,6 +14,5 @@ coverage.json
 typechain
 
 #Hardhat files
+artifacts
 cache
-
-
